--- a/css/addMeeting/calendar.css
+++ b/css/addMeeting/calendar.css
@@ -484,7 +484,8 @@ span[data-cal-date]:hover {
 #cal-slide-content {
   padding: 20px;
   color: #ffffff;
-  background-image: url("../../img/dark_wood.png");
+  background-color: black;
+  /* background-image: url("../../img/dark_wood.png"); */
   -webkit-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
   box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
 }
